--- a/project/VS2010Express/XBMC.vcxproj.filters
+++ b/project/VS2010Express/XBMC.vcxproj.filters
@@ -301,6 +301,12 @@
     <Filter Include="games\windows">
       <UniqueIdentifier>{e1900649-cbda-4c79-bd6a-b99103608116}</UniqueIdentifier>
     </Filter>
+    <Filter Include="dbwrappers\test">
+      <UniqueIdentifier>{43dbf5f1-ffdc-4fd5-8f6c-5f38f89b192f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="games\database">
+      <UniqueIdentifier>{811d2295-c206-4480-80fc-08955ddba8fa}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\xbmc\win32\pch.cpp">
@@ -3041,6 +3047,18 @@
     </ClCompile>
     <ClCompile Include="..\..\xbmc\utils\test\TestBSONVariantWriter.cpp">
       <Filter>utils\test</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\xbmc\dbwrappers\DynamicDatabase.cpp">
+      <Filter>dbwrappers</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\xbmc\dbwrappers\test\TestDynamicDatabase.cpp">
+      <Filter>dbwrappers\test</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\xbmc\games\database\SavegameDatabase.cpp">
+      <Filter>games\database</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\xbmc\games\database\SavegameInfoTag.cpp">
+      <Filter>games\database</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -5929,6 +5947,18 @@
     </ClInclude>
     <ClInclude Include="..\..\xbmc\utils\BSONVariantParser.h">
       <Filter>utils</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\dbwrappers\DynamicDatabase.h">
+      <Filter>dbwrappers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\utils\IDBInfoTag.h">
+      <Filter>utils</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\games\database\SavegameDatabase.h">
+      <Filter>games\database</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\games\database\SavegameInfoTag.h">
+      <Filter>games\database</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
