[joystick] Added Xpad joystick skeleton code

--- a/xbmc/input/linux/Makefile
+++ b/xbmc/input/linux/Makefile
@@ -1,6 +1,7 @@
 SRCS=LIRC.cpp \
      LinuxInputDevices.cpp \
-     LinuxJoystickSDL.cpp
+     LinuxJoystickSDL.cpp \
+     LinuxJoystickXpad.cpp
 
 LIB=input_linux.a
 
