Rewrite DynamicDatabase to abstract BSON handling, and include JSON as a parallel implementation enabled by a #define switch

--- a/project/VS2010Express/XBMC.vcxproj
+++ b/project/VS2010Express/XBMC.vcxproj
@@ -1146,7 +1146,7 @@
     <ClInclude Include="..\..\xbmc\settings\windows\GUIWindowTestPattern.h" />
     <ClInclude Include="..\..\xbmc\utils\BSONVariantParser.h" />
     <ClInclude Include="..\..\xbmc\utils\BSONVariantWriter.h" />
-    <ClInclude Include="..\..\xbmc\utils\IDBInfoTag.h" />
+    <ClInclude Include="..\..\xbmc\utils\IDeserializable.h" />
     <ClInclude Include="..\..\xbmc\video\FFmpegVideoDecoder.h" />
     <ClInclude Include="..\..\xbmc\interfaces\python\swig.h" />
     <ClInclude Include="..\..\xbmc\interfaces\python\XBPython.h" />
