--- a/xbmc/games/savegames/Makefile
+++ b/xbmc/games/savegames/Makefile
@@ -1,7 +1,7 @@
 SRCS=SavegameDatabase.cpp \
      SavegameInfoTag.cpp
 
-LIB=gamedatabase.a
+LIB=savegames.a
 
 include ../../../Makefile.include
 -include $(patsubst %.cpp,%.P,$(patsubst %.c,%.P,$(SRCS)))
