--- a/project/VS2010Express/XBMC.vcxproj
+++ b/project/VS2010Express/XBMC.vcxproj
@@ -592,8 +592,8 @@
     <ClCompile Include="..\..\xbmc\filesystem\ZipDirectory.cpp" />
     <ClCompile Include="..\..\xbmc\filesystem\ZipFile.cpp" />
     <ClCompile Include="..\..\xbmc\filesystem\ZipManager.cpp" />
-    <ClCompile Include="..\..\xbmc\games\database\SavegameDatabase.cpp" />
-    <ClCompile Include="..\..\xbmc\games\database\SavegameInfoTag.cpp" />
+    <ClCompile Include="..\..\xbmc\games\savegames\SavegameDatabase.cpp" />
+    <ClCompile Include="..\..\xbmc\games\savegames\SavegameInfoTag.cpp" />
     <ClCompile Include="..\..\xbmc\games\tags\GameboyTag.cpp" />
     <ClCompile Include="..\..\xbmc\games\tags\GameInfoTag.cpp" />
     <ClCompile Include="..\..\xbmc\games\tags\GameInfoTagLoader.cpp" />
@@ -1067,8 +1067,8 @@
     <ClInclude Include="..\..\xbmc\filesystem\VideoDatabaseDirectory\DirectoryNodeTags.h" />
     <ClInclude Include="..\..\xbmc\filesystem\windows\WINFileSMB.h" />
     <ClInclude Include="..\..\xbmc\filesystem\windows\WINSMBDirectory.h" />
-    <ClInclude Include="..\..\xbmc\games\database\SavegameDatabase.h" />
-    <ClInclude Include="..\..\xbmc\games\database\SavegameInfoTag.h" />
+    <ClInclude Include="..\..\xbmc\games\savegames\SavegameDatabase.h" />
+    <ClInclude Include="..\..\xbmc\games\savegames\SavegameInfoTag.h" />
     <ClInclude Include="..\..\xbmc\guilib\cximage.h" />
     <ClInclude Include="..\..\xbmc\games\tags\GameboyTag.h" />
     <ClInclude Include="..\..\xbmc\games\tags\GameInfoTag.h" />
